--- a/notebooks/CLUSTERING.ipynb
+++ b/notebooks/CLUSTERING.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "b0b2f295",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "92d31733",
    "metadata": {
     "code_folding": [
@@ -40,12 +40,13 @@
    "id": "e3308ac2",
    "metadata": {},
    "source": [
-    "## Traspoizione dei dati"
+    "## Traspoizione dei dati\n",
+    "Prima di iniziare dobbiamo trasporre le tabelle dei dati in modo che siano passabili agli algoritmi di Clustering. Le \"features\" dovranno essere le lunghezze d'onda dei dati."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "67a5b1fd",
    "metadata": {},
    "outputs": [],
@@ -57,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "ca6e213e",
    "metadata": {
     "scrolled": true
@@ -65,9 +66,9 @@
    "outputs": [],
    "source": [
     "# import dei \"normalized data without offset\"\n",
-    "data = pd.read_csv(\"../data/processed/data_normalized_without_offset.csv\",names=names,skiprows=1)\n",
+    "data = pd.read_csv(\"../data/processed/data_normalized_without_offset.csv\")\n",
     "# import dei dati senza rumore  (\"nn\" --> no noise)\n",
-    "data_nn = pd.read_csv(\"../data/processed/EDA_processed_data.csv\",names=names,skiprows=1)"
+    "data_nn = pd.read_csv(\"../data/processed/EDA_processed_data.csv\")"
    ]
   },
   {
@@ -75,9 +76,7 @@
    "id": "9e073ec0",
    "metadata": {},
    "source": [
-    "**Per poter usare il nostro algoritmo dobbiamo traspore il database, usare le lunghezze d'onda come features.**\n",
-    "\n",
-    "Import dei dati processati, quelli dove abbiamo provato a rimuovere il rumore"
+    "**Per poter usare il nostro algoritmo dobbiamo traspore il database, usando le lunghezze d'onda come features.**"
    ]
   },
   {
@@ -292,14 +291,6 @@
     "data_nnt = data_nnt[1:]\n",
     "data_nnt.columns = new_header #set the header row as the df header\n",
     "data_nnt.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3c098143",
-   "metadata": {},
-   "source": [
-    "Import dei dati normalizzati e senza offset, ma con rumore"
    ]
   },
   {
@@ -822,9 +813,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python388jvsc74a57bd0068ddb47582499f4904f3e20e4d9a7718b699a7b68aa1603fe2f9770fa268b69",
+   "display_name": "Python 3.8.8 64-bit ('datascience': conda)"
   },
   "language_info": {
    "codemirror_mode": {
