--- a/notebooks/FIT.ipynb
+++ b/notebooks/FIT.ipynb
@@ -1,30 +1,13 @@
 {
- "metadata": {
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.8"
-  },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "python388jvsc74a57bd0068ddb47582499f4904f3e20e4d9a7718b699a7b68aa1603fe2f9770fa268b69",
-   "display_name": "Python 3.8.8 64-bit ('datascience': conda)"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2,
  "cells": [
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "code_folding": [
+     7
+    ]
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -79,11 +62,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Ora devo interpolare gli spettri puri ai dati"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -113,8 +96,175 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>wn</th>\n",
+       "      <th>Albite</th>\n",
+       "      <th>Almandine</th>\n",
+       "      <th>Amesite</th>\n",
+       "      <th>Anatase</th>\n",
+       "      <th>Andradite</th>\n",
+       "      <th>Antigorite</th>\n",
+       "      <th>Armalcolite</th>\n",
+       "      <th>Arsenopyrite</th>\n",
+       "      <th>Augite</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Pyrophyllite</th>\n",
+       "      <th>Quartz</th>\n",
+       "      <th>Siderite</th>\n",
+       "      <th>Spinel</th>\n",
+       "      <th>Szomolnokite</th>\n",
+       "      <th>Talc</th>\n",
+       "      <th>Titanite</th>\n",
+       "      <th>Tremolite</th>\n",
+       "      <th>Zircon</th>\n",
+       "      <th>Zoisite</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>184.0</td>\n",
+       "      <td>-0.000227</td>\n",
+       "      <td>-0.015984</td>\n",
+       "      <td>-0.002342</td>\n",
+       "      <td>-0.007878</td>\n",
+       "      <td>-0.004560</td>\n",
+       "      <td>-0.008177</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.004824</td>\n",
+       "      <td>-0.004110</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.035991</td>\n",
+       "      <td>-0.004876</td>\n",
+       "      <td>-0.005696</td>\n",
+       "      <td>-0.785261</td>\n",
+       "      <td>-0.009674</td>\n",
+       "      <td>-0.003676</td>\n",
+       "      <td>-0.001134</td>\n",
+       "      <td>-0.022605</td>\n",
+       "      <td>-0.007181</td>\n",
+       "      <td>-0.001300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>185.0</td>\n",
+       "      <td>-0.000225</td>\n",
+       "      <td>-0.011871</td>\n",
+       "      <td>-0.002873</td>\n",
+       "      <td>-0.006370</td>\n",
+       "      <td>-0.004200</td>\n",
+       "      <td>-0.008576</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.005228</td>\n",
+       "      <td>-0.004117</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.035558</td>\n",
+       "      <td>-0.005350</td>\n",
+       "      <td>-0.005877</td>\n",
+       "      <td>-1.286136</td>\n",
+       "      <td>-0.011507</td>\n",
+       "      <td>-0.004178</td>\n",
+       "      <td>-0.001139</td>\n",
+       "      <td>-0.015591</td>\n",
+       "      <td>-0.008345</td>\n",
+       "      <td>-0.001415</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>186.0</td>\n",
+       "      <td>-0.000215</td>\n",
+       "      <td>-0.010829</td>\n",
+       "      <td>-0.003469</td>\n",
+       "      <td>-0.004698</td>\n",
+       "      <td>-0.003901</td>\n",
+       "      <td>-0.007864</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.005562</td>\n",
+       "      <td>-0.003877</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.056632</td>\n",
+       "      <td>-0.005895</td>\n",
+       "      <td>-0.006129</td>\n",
+       "      <td>-1.472472</td>\n",
+       "      <td>-0.012420</td>\n",
+       "      <td>-0.004868</td>\n",
+       "      <td>-0.001089</td>\n",
+       "      <td>-0.014400</td>\n",
+       "      <td>-0.009806</td>\n",
+       "      <td>-0.001524</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>187.0</td>\n",
+       "      <td>-0.000199</td>\n",
+       "      <td>-0.008271</td>\n",
+       "      <td>-0.004154</td>\n",
+       "      <td>-0.002379</td>\n",
+       "      <td>-0.003429</td>\n",
+       "      <td>-0.007897</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.006019</td>\n",
+       "      <td>-0.003543</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.086351</td>\n",
+       "      <td>-0.006466</td>\n",
+       "      <td>-0.006412</td>\n",
+       "      <td>-1.031640</td>\n",
+       "      <td>-0.011859</td>\n",
+       "      <td>-0.006109</td>\n",
+       "      <td>-0.000955</td>\n",
+       "      <td>-0.009475</td>\n",
+       "      <td>-0.010459</td>\n",
+       "      <td>-0.001647</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>188.0</td>\n",
+       "      <td>-0.000180</td>\n",
+       "      <td>-0.005527</td>\n",
+       "      <td>-0.004877</td>\n",
+       "      <td>-0.000414</td>\n",
+       "      <td>-0.003007</td>\n",
+       "      <td>-0.008976</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.005964</td>\n",
+       "      <td>-0.003484</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.116858</td>\n",
+       "      <td>-0.007050</td>\n",
+       "      <td>-0.006618</td>\n",
+       "      <td>-0.587861</td>\n",
+       "      <td>-0.012285</td>\n",
+       "      <td>-0.007753</td>\n",
+       "      <td>-0.000767</td>\n",
+       "      <td>-0.010622</td>\n",
+       "      <td>-0.011117</td>\n",
+       "      <td>-0.001753</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 62 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
        "      wn    Albite  Almandine   Amesite   Anatase  Andradite  Antigorite  \\\n",
        "0  184.0 -0.000227  -0.015984 -0.002342 -0.007878  -0.004560   -0.008177   \n",
@@ -138,11 +288,11 @@
        "4 -0.587861     -0.012285 -0.007753 -0.000767  -0.010622 -0.011117 -0.001753  \n",
        "\n",
        "[5 rows x 62 columns]"
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>wn</th>\n      <th>Albite</th>\n      <th>Almandine</th>\n      <th>Amesite</th>\n      <th>Anatase</th>\n      <th>Andradite</th>\n      <th>Antigorite</th>\n      <th>Armalcolite</th>\n      <th>Arsenopyrite</th>\n      <th>Augite</th>\n      <th>...</th>\n      <th>Pyrophyllite</th>\n      <th>Quartz</th>\n      <th>Siderite</th>\n      <th>Spinel</th>\n      <th>Szomolnokite</th>\n      <th>Talc</th>\n      <th>Titanite</th>\n      <th>Tremolite</th>\n      <th>Zircon</th>\n      <th>Zoisite</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>184.0</td>\n      <td>-0.000227</td>\n      <td>-0.015984</td>\n      <td>-0.002342</td>\n      <td>-0.007878</td>\n      <td>-0.004560</td>\n      <td>-0.008177</td>\n      <td>0.0</td>\n      <td>-0.004824</td>\n      <td>-0.004110</td>\n      <td>...</td>\n      <td>-0.035991</td>\n      <td>-0.004876</td>\n      <td>-0.005696</td>\n      <td>-0.785261</td>\n      <td>-0.009674</td>\n      <td>-0.003676</td>\n      <td>-0.001134</td>\n      <td>-0.022605</td>\n      <td>-0.007181</td>\n      <td>-0.001300</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>185.0</td>\n      <td>-0.000225</td>\n      <td>-0.011871</td>\n      <td>-0.002873</td>\n      <td>-0.006370</td>\n      <td>-0.004200</td>\n      <td>-0.008576</td>\n      <td>0.0</td>\n      <td>-0.005228</td>\n      <td>-0.004117</td>\n      <td>...</td>\n      <td>-0.035558</td>\n      <td>-0.005350</td>\n      <td>-0.005877</td>\n      <td>-1.286136</td>\n      <td>-0.011507</td>\n      <td>-0.004178</td>\n      <td>-0.001139</td>\n      <td>-0.015591</td>\n      <td>-0.008345</td>\n      <td>-0.001415</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>186.0</td>\n      <td>-0.000215</td>\n      <td>-0.010829</td>\n      <td>-0.003469</td>\n      <td>-0.004698</td>\n      <td>-0.003901</td>\n      <td>-0.007864</td>\n      <td>0.0</td>\n      <td>-0.005562</td>\n      <td>-0.003877</td>\n      <td>...</td>\n      <td>-0.056632</td>\n      <td>-0.005895</td>\n      <td>-0.006129</td>\n      <td>-1.472472</td>\n      <td>-0.012420</td>\n      <td>-0.004868</td>\n      <td>-0.001089</td>\n      <td>-0.014400</td>\n      <td>-0.009806</td>\n      <td>-0.001524</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>187.0</td>\n      <td>-0.000199</td>\n      <td>-0.008271</td>\n      <td>-0.004154</td>\n      <td>-0.002379</td>\n      <td>-0.003429</td>\n      <td>-0.007897</td>\n      <td>0.0</td>\n      <td>-0.006019</td>\n      <td>-0.003543</td>\n      <td>...</td>\n      <td>-0.086351</td>\n      <td>-0.006466</td>\n      <td>-0.006412</td>\n      <td>-1.031640</td>\n      <td>-0.011859</td>\n      <td>-0.006109</td>\n      <td>-0.000955</td>\n      <td>-0.009475</td>\n      <td>-0.010459</td>\n      <td>-0.001647</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>188.0</td>\n      <td>-0.000180</td>\n      <td>-0.005527</td>\n      <td>-0.004877</td>\n      <td>-0.000414</td>\n      <td>-0.003007</td>\n      <td>-0.008976</td>\n      <td>0.0</td>\n      <td>-0.005964</td>\n      <td>-0.003484</td>\n      <td>...</td>\n      <td>-0.116858</td>\n      <td>-0.007050</td>\n      <td>-0.006618</td>\n      <td>-0.587861</td>\n      <td>-0.012285</td>\n      <td>-0.007753</td>\n      <td>-0.000767</td>\n      <td>-0.010622</td>\n      <td>-0.011117</td>\n      <td>-0.001753</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 62 columns</p>\n</div>"
+      ]
      },
+     "execution_count": 29,
      "metadata": {},
-     "execution_count": 29
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -156,5 +306,86 @@
    "outputs": [],
    "source": []
   }
- ]
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.1"
+  },
+  "latex_envs": {
+   "LaTeX_envs_menu_present": true,
+   "autoclose": false,
+   "autocomplete": true,
+   "bibliofile": "biblio.bib",
+   "cite_by": "apalike",
+   "current_citInitial": 1,
+   "eqLabelWithNumbers": true,
+   "eqNumInitial": 1,
+   "hotkeys": {
+    "equation": "Ctrl-E",
+    "itemize": "Ctrl-I"
+   },
+   "labels_anchors": false,
+   "latex_user_defs": false,
+   "report_style_numbering": false,
+   "user_envs_cfg": false
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
