--- a/notebooks/FIT.ipynb
+++ b/notebooks/FIT.ipynb
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -176,30 +176,57 @@
      "data": {
       "text/plain": [
        "               names  abbundances\n",
-       "12        Chrysotile     0.389803\n",
-       "19        Dwornikite     0.128661\n",
-       "24        Forsterite     0.120322\n",
-       "36  Magnesiochromite     0.037744\n",
-       "32          Jarosite     0.029193"
+       "0         Chrysotile     0.389803\n",
+       "1         Dwornikite     0.128661\n",
+       "2         Forsterite     0.120322\n",
+       "3   Magnesiochromite     0.037744\n",
+       "4           Jarosite     0.029193\n",
+       "5             Spinel     0.024856\n",
+       "6           Chromite     0.022495\n",
+       "7           Fayalite     0.019940\n",
+       "8           Goethite     0.017871\n",
+       "9       Pyrophyllite     0.014692\n",
+       "10      Arsenopyrite     0.014537\n",
+       "11           Anatase     0.012604\n",
+       "12         Magnesite     0.012538\n",
+       "13        Nontronite     0.011913\n",
+       "14           Zoisite     0.011634\n",
+       "15          Diopside     0.010565\n",
+       "16          Gaspeite     0.010555\n",
+       "17         Almandine     0.010084"
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>names</th>\n      <th>abbundances</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>12</th>\n      <td>Chrysotile</td>\n      <td>0.389803</td>\n    </tr>\n    <tr>\n      <th>19</th>\n      <td>Dwornikite</td>\n      <td>0.128661</td>\n    </tr>\n    <tr>\n      <th>24</th>\n      <td>Forsterite</td>\n      <td>0.120322</td>\n    </tr>\n    <tr>\n      <th>36</th>\n      <td>Magnesiochromite</td>\n      <td>0.037744</td>\n    </tr>\n    <tr>\n      <th>32</th>\n      <td>Jarosite</td>\n      <td>0.029193</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>names</th>\n      <th>abbundances</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Chrysotile</td>\n      <td>0.389803</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Dwornikite</td>\n      <td>0.128661</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Forsterite</td>\n      <td>0.120322</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Magnesiochromite</td>\n      <td>0.037744</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Jarosite</td>\n      <td>0.029193</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>Spinel</td>\n      <td>0.024856</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>Chromite</td>\n      <td>0.022495</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>Fayalite</td>\n      <td>0.019940</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>Goethite</td>\n      <td>0.017871</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>Pyrophyllite</td>\n      <td>0.014692</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>Arsenopyrite</td>\n      <td>0.014537</td>\n    </tr>\n    <tr>\n      <th>11</th>\n      <td>Anatase</td>\n      <td>0.012604</td>\n    </tr>\n    <tr>\n      <th>12</th>\n      <td>Magnesite</td>\n      <td>0.012538</td>\n    </tr>\n    <tr>\n      <th>13</th>\n      <td>Nontronite</td>\n      <td>0.011913</td>\n    </tr>\n    <tr>\n      <th>14</th>\n      <td>Zoisite</td>\n      <td>0.011634</td>\n    </tr>\n    <tr>\n      <th>15</th>\n      <td>Diopside</td>\n      <td>0.010565</td>\n    </tr>\n    <tr>\n      <th>16</th>\n      <td>Gaspeite</td>\n      <td>0.010555</td>\n    </tr>\n    <tr>\n      <th>17</th>\n      <td>Almandine</td>\n      <td>0.010084</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 12
+     "execution_count": 64
     }
    ],
    "source": [
     "#numero di spettri per cluster in ordine\n",
-    "weights=[np.count_nonzero(labels==i) for i in range(len(data.columns)-1)] \n",
+    "weights=[np.count_nonzero(labels==i) for i in range(len(data.columns)-1)]\n",
+    "\n",
     "#moltiplico i coeficienti del cluster i-esimo per questo numero\n",
-    "abbundances_notnormalized=[coeff[i]*weights[i] for i in range(len(data.columns)-1)]\n",
+    "abb_notnormalized=[coeff[i]*weights[i] for i in range(len(data.columns)-1)]\n",
+    "\n",
     "#e infine ho la media pesata dei coeficienti\n",
-    "abbundances=sum(abbundances_notnormalized)/(sum(abbundances_notnormalized).sum())\n",
+    "abb=sum(abb_notnormalized)/(sum(abb_notnormalized).sum())\n",
+    "\n",
     "#Creo un Pandas dataframe con nomi e abbondanze\n",
-    "abbundance_table=pd.DataFrame({'names':pure_material_names,'abbundances':abbundances})\n",
+    "abb_table=pd.DataFrame({'names':pure_material_names,'abbundances':abb})\n",
+    "\n",
     "#riordino in base alla concenrazione\n",
-    "abbundance_table.sort_values('abbundances',ascending=False,inplace=True)\n",
-    "abbundance_table.head(5)"
+    "abb_table.sort_values('abbundances',ascending=False,inplace=True, ignore_index=True)\n",
+    "\n",
+    "abb_table[abb_table['abbundances']>0.01]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "abb_table.to_csv(\"../data/processed/abb_table.csv\")"
    ]
   },
   {
