--- a/notebooks/FIT.ipynb
+++ b/notebooks/FIT.ipynb
@@ -12,10 +12,8 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from sklearn.cluster import DBSCAN, OPTICS, KMeans\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "from sklearn.linear_model import LinearRegression, Lasso\n",
+    "from sklearn.linear_model import LinearRegression\n",
     "from functions import *\n",
     "%matplotlib inline"
    ]
@@ -101,7 +99,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dopo aver interpolato i dati normalizziamo nuovamente gli spettri puri."
+    "Dopo aver interpolato i dati normalizziamo gli spettri puri."
    ]
   },
   {
@@ -132,14 +130,14 @@
     "\n",
     "Nel nostro modello gli spettri puri $P_{i} \\in \\mathbb{R}^n$ dove $n$ e' la dimesnionalita' del vettore delle intensita' dei vari spettri.\n",
     " \n",
-    "$C = \\sum \\alpha_{i}P_{i} + P_{0} $ dove $P_{0}$ e' un parametro costante"
+    "$C = \\sum \\alpha_{i}P_{i} + P_{0} $ dove $P_{0}$ e' un parametro costante."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Fortunatamente nell'ultimo aggiornamento di SikitLearn (rilasciato proprio nel periodo in cui abbiamo lavorato al progetto) e' stato introdotto il parametro \"positive\" in LinearRegression, che permette di considerare solo coefficienti non negativi ♥"
+    "Fortunatamente nell'ultimo aggiornamento di SikitLearn (rilasciato proprio nel periodo in cui abbiamo lavorato al progetto) e' stato introdotto il parametro \"positive\" in LinearRegression, che permette di considerare solo coefficienti non negativi :)"
    ]
   },
   {
@@ -155,7 +153,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Per ogni cluster facciamo quindi una regressione lineare estrapolando i coefficienti e l'interetta."
+    "Per ogni cluster facciamo quindi una regressione lineare estrapolando i coefficienti e l'intercetta."
    ]
   },
   {
@@ -220,7 +218,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tenendo conto del numero di spettri presenti in ogni cluster, cerchiamo di determinare il materiale piu' abbondande nel campione."
+    "Tenendo conto del numero di spettri presenti in ogni cluster, determiniamo il materiale piu' abbondande nel campione."
    ]
   },
   {
@@ -402,13 +400,6 @@
    "source": [
     "abb_table.to_csv(\"../data/processed/abb_table.csv\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
