aggiunta automatizzazione eda

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -269,7 +269,7 @@
     "plt.plot(data.wn,data.r1c1)\n",
     "plt.plot(data.wn,data.r1c2)\n",
     "plt.plot(data.wn,data.r1c3)\n",
-    "plt.legend(pure_material_names[:3]);"
+    "plt.legend(['row 1 column 1','row 1 column 2','row 1 column 3']);"
    ]
   },
   {
