Avanti con il report

--- a/reports/report.ipynb
+++ b/reports/report.ipynb
@@ -222,7 +222,116 @@
   },
   {
    "source": [
-    "# Clustering"
+    "# Clustering\n",
+    "La prcedura qui è ben spiegata in modo dettagliato nei notebooks utilizzati per sviluppare il progetto (in './notebooks/CLUSTERING.ipynb'). Per il motivo che le altezze dei picchi, come i materiali, variano in modo continuo, abbiamo scelto di utilizzare l'algoritmo Kmeans. In questo modo abbiamo cluster utili a identificare materiali abbastanza diversi (la definizione di cluster non è univoca quì, dato che le abbondanze variano in modo continuo).\n",
+    "\n",
+    "Ci concentriamo ora su due aspetti:\n",
+    "\n",
+    "1. **Capire se la clusterizzazione correla con la posizione**\n",
+    "2. **Generare dei centroidi dei cluster che permettono di eliminare il rumore sugli spettri, senza alterare troppo i picchi**"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "## Il risultato del clustering correla con la posizione?\n",
+    "Vogliamo ora capire se esiste una correlazione spaziale nella cluserizzazione. Questo corrispondde al chiedersi se punti vicini hanno materiali simili. Per fare ciò sceglaimo di utilizzare un basso numero di cluster (5), in modo di poter avere una corrispondenza visiva su una griglia $11x11$. **Questa scelta equivale a ritenere uguali materiali con abbondanze piuttosto diverse.** \n",
+    "\n",
+    "Di seguito il risultato del clustering con KMeans (#cluster=5).\n",
+    "\n",
+    "![correlation_cluster.](./figures/correlation_cluster.png)\n",
+    "\n",
+    "Andiamo ora a vedere visivamente se il risultato del clustering correla con la posizione. Effettuiamo un plot su una grilgia 11x11 che mostra la clusterizzazione con colori diversi. Visivamente non sembra di vedere abbondanze particolari (attenzione a non confondere abbondanze con correlazioni).\n",
+    "\n",
+    "### Definizione di correlazione spaziale\n",
+    "Per descrivere in modo quantitativo la correlazione utilizziamo il coeficiente di Moran (vedi definizione alla [pagina Wikipedia](https://en.wikipedia.org/wiki/Moran%27s_I)). La metrica che utilizziamo è un *nearest neighbour*. Di seguito degli esempi che spiegano in modo pratico questo indice.\n",
+    "### Esempi\n",
+    "**Esempio con una matrice Random 11x11 (P($\\in$cluster)=$\\frac{1}{2}$)**\n",
+    "\n",
+    "Un esempio di cluster completamente random, notare come il coeficiente di Morange sia circa 0 (in questo caso -0.036). \n",
+    "\n",
+    "![example1.](./figures/example1.png)\n",
+    "\n",
+    "**Esempio di alta correlazione: metà reticolo nel cluster(10x5), metà no (10x5)**\n",
+    "\n",
+    "Quì un esempio di un cluster evidentemente molto correlato spazialmente, notare come il coeficiente di Morange è vicino a 1 (0.90).\n",
+    "\n",
+    "![example2.](./figures/example2.png)\n",
+    "\n",
+    "**Esempio di alta correlazione: caso in cui il cluster è piccolo**\n",
+    "\n",
+    "Notiamo qui infine che il coeficiente di Morange tende a uno anche nel caso di un cluster piccolo e compatto (correlato spazialmente). Vogliamo evidenziare qui che questo coeficiente non dipende dal numero di punti nel cluster rispetto al numero di punti del reticolo. Anche in questo caso il coeficiente di morange è tendente a 1 (0.75).\n",
+    "\n",
+    "![example3.](./figures/example3.png)\n",
+    "\n",
+    "### Coeficiente di Morane per i nostri cluster\n",
+    "Andiamo a calcolare i coefficienti di Morange per i nostri cluster. Chiaramente ne dobbiamo calcolare uno per cluster. I coefficienti di Moran sono scritti nelle labels.\n",
+    "\n",
+    "Negli spettri dati come esempio questi coefficienti sono tendenti a zero, non è evidenziata alcuna correlazione particolare.\n",
+    "\n",
+    "![correlation_grid.](./figures/correlation_grid.png)"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "## Utilizziamo i centroidi per effettuare i FIT ai materiali puri\n",
+    "### Come scegliamo il numero di cluster?\n",
+    "Vogliamo utilizzare la clasterizzazione per rimuovere il rumore dagli spettri, mediando sul cluster (utilizzando i centroidi).\n",
+    "\n",
+    "Per scegliere il numero di cluster andiamo a vedere come varia l'errore della clusterizzazione al variare del numero di cluster(attributo \"inertia\" della classe KMeans). \n",
+    "\n",
+    "Come abbiamo visto a lezione ci aspettiamo una zona a decrescenza rapida e una a decrescenza più lenta, vogliamo lavorare sul ginocchio di questa curva. Abbiamo posto come stop un bound alla decrescita dell'errore sui cluster (0.001). Di seguito la curva di decrescità dell'errore in funzione del numero di cluster, con il punto scelto utilizzando il nostro bound.\n",
+    "\n",
+    "![number_cluster.png.](./figures/number_cluster.png)\n",
+    "\n",
+    "Questo è il risultato della clusterizzazione con il numero di cluster mostarto sopra.\n",
+    "\n",
+    "![FIT_cluster.](./figures/FIT_cluster.png)\n",
+    "\n",
+    "Di questo clustering teniamo i centroidi, con i quali fitteremo gli spettri puri. Di seguito importiamo e plottiamo i centroidi generati dalla clusterizzazione automatizzata con make. "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#import dei pesi dei cluster\n",
+    "labels=np.loadtxt(\"../repo_raman/data/CLUSTERING_labels.txt\")\n",
+    "# import dei centroidi\n",
+    "del data\n",
+    "data = pd.read_csv(\"../repo_raman/data/CLUSTERING_data_centres.csv\")\n",
+    "data.drop(labels='Unnamed: 0',inplace=True,axis=1)\n",
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raman_plot()\n",
+    "for temp in np.unique(label):\n",
+    "    plt.plot(data.wn,data[temp])"
+   ]
+  },
+  {
+   "source": [
+    "# FIT\n",
+    "Per trovare i materiali che compongono i cluster scegliamo di **non eseguire un fit su ogni spettro all'interno di un determinato cluster**, ma **procediamo mediando su tutti gli spettri presenti nei singoli cluster e fittiamo sul risultato della media.** Questo ci permette di ridurre sensibilmente il rumore.\n",
+    "\n",
+    "Per ogni cluster effettuiamo una regressione lineare estrappolando i coefficienti, che poi normalizzati costituiranno le abbondanze dei cluster.  La regressione è del tipo\n",
+    "\n",
+    "$C = \\sum \\alpha_{i}P_{i} + c$ dove i $P_{i}$ sono gli spettri puri, $C$ il centroide del cluster.\n",
+    "\n",
+    "Il risultato dei fit è il seguente.\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
