Finito il report

--- a/reports/report.ipynb
+++ b/reports/report.ipynb
@@ -368,16 +368,30 @@
   {
    "source": [
     "# FIT\n",
-    "Per trovare i materiali che compongono i cluster scegliamo di **non eseguire un fit su ogni spettro all'interno di un determinato cluster**, ma **procediamo mediando su tutti gli spettri presenti nei singoli cluster e fittiamo sul risultato della media.** Questo ci permette di ridurre sensibilmente il rumore.\n",
+    "Per trovare i materiali che compongono i cluster scegliamo di **non eseguire un fit su ogni spettro all'interno di un determinato cluster**, ma **procediamo mediando su tutti gli spettri presenti nei singoli cluster e fittiamo sul risultato della media.** Questo ci permette di ridurre sensibilmente il rumore, sebbene modifichi parzialmente i picchi.\n",
     "\n",
-    "Per ogni cluster effettuiamo una regressione lineare estrappolando i coefficienti, che poi normalizzati costituiranno le abbondanze dei cluster.  La regressione è del tipo\n",
+    "Per ogni cluster effettuiamo una regressione lineare estrappolando i coefficienti che poi, normalizzati, costituiranno le abbondanze dei cluster. Per calcolare quest'ultime abbiamo chiaramente pesato i cluster in base al numero di spettri che sono costituiti.\n",
     "\n",
-    "$C = \\sum \\alpha_{i}P_{i} + c$ dove i $P_{i}$ sono gli spettri puri, $C$ il centroide del cluster.\n",
+    " La regressione è del tipo $C = \\sum \\alpha_{i}P_{i} + c$ dove i $P_{i}$ sono gli spettri puri, $C$ il centroide del cluster.\n",
     "\n",
-    "Il risultato dei fit è il seguente.\n"
+    "Il risultato dei fit è il seguente.\n",
+    "\n",
+    "![final_FIT.](./figures/final_FIT.png)\n",
+    "\n",
+    "ed infine dai coeficineti pesati per il numero di elementi per cluster e normalizzati otteniamo le abbondanze. Le importiamo dall'output dell'FIT automatizzato con make e mostriamo i materiali con un'abbondanza maggiore dell' 1%. **Questo è il risultato finale**."
    ],
    "cell_type": "markdown",
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "abb_table = pd.read_csv(\"../repo_raman/data/abb_table.csv\")\n",
+    "abb_table[abb_table['abbundances']>0.01]"
+   ]
   }
  ]
 }
