--- a/reports/report.ipynb
+++ b/reports/report.ipynb
@@ -10,12 +10,15 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.1"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python385jvsc74a57bd06804ccb5ff247747af0538af36889a18b2c04cfd814e1dafee83181860a424e3",
-   "display_name": "Python 3.8.5 64-bit ('base': conda)"
+   "name": "python3",
+   "display_name": "Python 3.8.1 64-bit ('DataMining': conda)"
+  },
+  "interpreter": {
+   "hash": "d842dcdeae66aaaa946aff51bb30d7274e5417b88a37e290783715cfe45c1751"
   }
  },
  "nbformat": 4,
